# crafting-interpreters

./: meson.build
challenges/: chapter_12.md  chapter_13.md  chapter_18.md  chapter_19.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_26.md  chapter_27.md  chapter_28.md  chapter_29.md  chapter_30.md
challenges/chapter_11/: challenges.md
challenges/chapter_16/: chal_1.md  chal_2.md  chal_3.md
challenges/chapter_17/: challenge_1.md  challenge_2.md  challenge_3.md
challenges/chapter_2/: challenge_1.md  challenge_3.md
challenges/chapter_3/: challenge_1.md  challenge_3.md
challenges/chapter_4/: challenge_2.md
challenges/chapter_7/: challenges.md
chapter_1/: challenge_1.md  challenge_2.java  challenge_3.c
chapter_10/: challenges.md
chapter_2/: challenge_2.md
chapter_3/: challenge_2.md
chapter_4/: challenge_1.md  challenge_3.md
chapter_5/: challenges.md
chapter_7/: challenges.md
chapter_8/: challenges.md
chapter_9/: challenges.md
clox/: .clang-format  .gitignore  Makefile  run.sh
clox/include/: chunk.h  compiler.h  line.h  memory.h  object.h  repl.h  scanner.h  table.h  value.h  vm.h
clox/scripts/: bench_class_init.lox  class_this.lox  closure.lox  closure_obj.lox  concat.lox  continue.lox  deep_inherit.lox  empty_methods.lox  inherit.lox  local.lox  loops.lox  many_fun.lox  more_than_256_locals.lox  print_fun.lox  simple_fun.lox  super_init.lox  undefined.lox  upvalue.lox  (+1 more)
jlox/: Lox.java  Scanner.java  Token.java  TokenType.java  gen_ast  pom.xml  run_lox  syntax.ebnf  test_inner.sh
jlox-old/: Scanner.java  Token.java
(+69 files in other folders)
