project('crafting_interpreters', ['java', 'c'])

# Java Lox Implementation
jar('jlox', ['jlox/Lox.java', 'jlox/Scanner.java', 'jlox/Token.java', 'jlox/TokenType.java'], main_class: 'jlox.Lox')

# Chapter Challenges
jar('chapter_1_challenge_2', 'chapter_1/challenge_2.java', main_class: 'HelloWorld')
executable('chapter_1_challenge_3', 'chapter_1/challenge_3.c')
